﻿更新履歴

==== Ver 1.2.7-dev(2015/xx/xx)
 * NEW: 投稿欄での Ctrl+V でクリップボード上の画像を投稿できるようになりました
 * NEW: UserStreams の quoted_tweet イベントに対応
 * NEW: 公式RTの通知に対応しました
 * NEW: 公式の引用ツイートに則った投稿に対応しました
  - 操作メニューまたはツイート右クリックメニューから Quote を選択すると、投稿欄に該当のステータスURLが入力されます
  - 注：これまでの Quote は Quote(Unofficial) に変更しました
 * NEW: Gyazoのサムネイル表示に対応
 * FIX: ツイートの選択時にシステムの効果音が鳴っていた不具合を修正
 * FIX: Ctrl+Eでツイート内のリンクを開く際に、Ctrlキーで「ユーザーのホームをタブで開く」設定を反転させる機能と競合していた不具合を修正 (thx @dj_kusuha!)
 * FIX: 異常なsourceを含むツイートの振り分け時にエラーが発生する問題の回避
 * FIX: 正規表現でSourceを振り分ける条件をミュートタブに設定するとDM受信時にエラーが発生する不具合を修正 (thx @Raydere!)
 * FIX: 起動直後に pic.twitter.com での画像投稿が行えない問題の修正
 * CHG: Twitter APIへの接続でgzip圧縮を使用して通信を行うようになりました

==== Ver 1.2.6(2015/06/10)
 * Twitter 社から規約違反として指摘を受けた箇所を修正したバージョンです
 * OpenTween で今まで使用していた API キーを失効し再発行したため、必ずアップデートして下さい
 * v1.2.5 までの過去のバージョンは今後使用できません

 * NEW: ミュート機能を追加しました
  - 設定したミュート条件はRecentだけでなく検索やリストなど全てのタブに適用されます
  - 振り分けルール編集画面から「(ミュート)」タブに条件を追加することで設定できます
 * NEW: ツイートに含まれる絵文字を画像として表示できるようになりました (thx @takke!)
 * NEW: 振り分けルールの有効/無効を切り替えられるようにしました
 * NEW: ツイートURLをクリックした場合に関連発言表示タブを開くようにしました
 * NEW: 引用ツイート (本文中のツイートURL) を発言詳細部で展開して表示するようにしました
 * NEW: プロフィール画面の読み込みなどの処理をキャンセルできるようにしました
  - 一部で報告されている読み込み中のまま数十秒待たされる現象への一時的な対処
 * NEW: 振り分けルールの追加時に重複チェックが行われるようになりました
 * NEW: SoundCloudのサムネイル表示に対応
 * CHG: ツイートを複数選択した状態での一括ふぁぼ追加を行えないようにしました
  - Twitter社により規約に反するとの指摘があったため
 * FIX: Mobypicture のサムネイルが表示されなくなっていた不具合を修正
 * FIX: 画像ファイルをD&Dした際のチェック処理が不十分になっていた不具合を修正
 * FIX: 存在しないスクリーンネームに対してDMを送信した場合のエラーを適切に扱えていない不具合を修正 (thx @Linfiel!)
 * FIX: 異常なsourceを含むツイートの表示時にエラーが発生する問題を回避 (thx @blanite!)
 * FIX: Tumblrからのサムネイル画像取得が時々エラーになる問題の回避
 * FIX: 短縮URL生成時にタイムアウトしてエラーになる問題の回避

==== Ver 1.2.5(2015/02/11)
 * NEW: 他人にRTされた自分のツイートをメニューから削除できるようになりました
 * NEW: UserStreams の favorited_retweet イベント / retweeted_retweet イベントに対応
  - 注：イベントの通知や履歴への登録はされません
 * NEW: 着せ替えアイコン機能についての説明テキストを同梱しました
 * NEW: 短縮URLとして展開の対象とするドメインを追加しました
 * NEW: DPIの異なる環境間で設定ファイルをコピーしても画面幅などが正しく復元されるようになりました