@@ -144,7 +144,6 @@
             this.RtOpMenuItem = new System.Windows.Forms.ToolStripMenuItem();
             this.RtUnOpMenuItem = new System.Windows.Forms.ToolStripMenuItem();
             this.QtOpMenuItem = new System.Windows.Forms.ToolStripMenuItem();
-            this.QtUnOpMenuItem = new System.Windows.Forms.ToolStripMenuItem();
             this.ToolStripSeparator25 = new System.Windows.Forms.ToolStripSeparator();
             this.FavOpMenuItem = new System.Windows.Forms.ToolStripMenuItem();
             this.FavoriteRetweetMenuItem = new System.Windows.Forms.ToolStripMenuItem();
@@ -282,7 +281,6 @@
             this.ReTweetStripMenuItem = new System.Windows.Forms.ToolStripMenuItem();
             this.ReTweetUnofficialStripMenuItem = new System.Windows.Forms.ToolStripMenuItem();
             this.QuoteStripMenuItem = new System.Windows.Forms.ToolStripMenuItem();
-            this.QuoteUnofficialStripMenuItem = new System.Windows.Forms.ToolStripMenuItem();
             this.ToolStripSeparator39 = new System.Windows.Forms.ToolStripSeparator();
             this.FavAddToolStripMenuItem = new System.Windows.Forms.ToolStripMenuItem();
             this.FavoriteRetweetContextMenu = new System.Windows.Forms.ToolStripMenuItem();
@@ -1296,7 +1294,6 @@
             this.RtOpMenuItem,
             this.RtUnOpMenuItem,
             this.QtOpMenuItem,
-            this.QtUnOpMenuItem,
             this.ToolStripSeparator25,
             this.FavOpMenuItem,
             this.FavoriteRetweetMenuItem,
@@ -1356,12 +1353,6 @@
             this.QtOpMenuItem.Name = "QtOpMenuItem";
             resources.ApplyResources(this.QtOpMenuItem, "QtOpMenuItem");
             this.QtOpMenuItem.Click += new System.EventHandler(this.QuoteStripMenuItem_Click);
-            // 
-            // QtUnOpMenuItem
-            // 
-            this.QtUnOpMenuItem.Name = "QtUnOpMenuItem";
-            resources.ApplyResources(this.QtUnOpMenuItem, "QtUnOpMenuItem");
-            this.QtUnOpMenuItem.Click += new System.EventHandler(this.QuoteUnofficialStripMenuItem_Click);
             // 
             // ToolStripSeparator25
             // 
@@ -2229,7 +2220,6 @@
             this.ReTweetStripMenuItem,
             this.ReTweetUnofficialStripMenuItem,
             this.QuoteStripMenuItem,
-            this.QuoteUnofficialStripMenuItem,
             this.ToolStripSeparator39,
             this.FavAddToolStripMenuItem,
             this.FavoriteRetweetContextMenu,
@@ -2290,12 +2280,6 @@
             this.QuoteStripMenuItem.Name = "QuoteStripMenuItem";
             resources.ApplyResources(this.QuoteStripMenuItem, "QuoteStripMenuItem");
             this.QuoteStripMenuItem.Click += new System.EventHandler(this.QuoteStripMenuItem_Click);
-            // 
-            // QuoteUnofficialStripMenuItem
-            // 
-            this.QuoteUnofficialStripMenuItem.Name = "QuoteUnofficialStripMenuItem";
-            resources.ApplyResources(this.QuoteUnofficialStripMenuItem, "QuoteUnofficialStripMenuItem");
-            this.QuoteUnofficialStripMenuItem.Click += new System.EventHandler(this.QuoteUnofficialStripMenuItem_Click);
             // 
             // ToolStripSeparator39
             // 
@@ -2811,8 +2795,6 @@
         private ToolStripAPIGauge toolStripApiGauge;
         private System.Windows.Forms.ToolStripMenuItem CreateSourceRuleOpMenuItem;
         private System.Windows.Forms.ToolStripMenuItem SourceRuleMenuItem;
-        private System.Windows.Forms.ToolStripMenuItem QtUnOpMenuItem;
-        private System.Windows.Forms.ToolStripMenuItem QuoteUnofficialStripMenuItem;
 
     }
 }
