@@ -6,8 +6,11 @@
  * NEW: 公式RTの通知に対応しました
  * NEW: 公式の引用ツイートに則った投稿に対応しました
   - 操作メニューまたはツイート右クリックメニューから Quote を選択すると、投稿欄に該当のステータスURLが入力されます
-  - 注：これまでの Quote は Quote(Unofficial) に変更しました
+  - 以前までの「Quote」とは機能が異なるため注意して下さい
  * NEW: Gyazoのサムネイル表示に対応
+ * CHG: 非公式RTとQTの機能を統合しました
+  - 「Retweet(Unofficial)」機能は「RT @***: 」が入力されるだけでなく返信先 (in_reply_to と呼ばれる) の情報が投稿時に付くようになります
+  - かつては非公式RTの in_reply_to の有無でフォロワーから見える範囲が変化しましたが、現在はその差異がないため統合しました
  * FIX: ツイートの選択時にシステムの効果音が鳴っていた不具合を修正
  * FIX: Ctrl+Eでツイート内のリンクを開く際に、Ctrlキーで「ユーザーのホームをタブで開く」設定を反転させる機能と競合していた不具合を修正 (thx @dj_kusuha!)
  * FIX: 異常なsourceを含むツイートの振り分け時にエラーが発生する問題の回避
